<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/offerwall"
        android:title="@string/offerwal_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/back"
        android:orderInCategory="101"
        android:title="@string/back_webview"
        android:icon="@drawable/ic_webview_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/forward"
        android:orderInCategory="102"
        android:title="@string/forward_webview"
        android:icon="@drawable/ic_webview_forward"
        app:showAsAction="ifRoom"/>

</menu>
